--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,23 @@
 {
     "cucumberautocomplete.steps": [
-        ".cucumber/stepDefinitions/*.js",
-        
-        
+        ".cucumber/stepDefinitions/*.js"
     ],
+    
     "cucumberautocomplete.strictGherkinCompletion": true,
     "cucumberautocomplete.strictGherkinValidation": true,
     "cucumberautocomplete.smartSnippets": true,
     "cucumberautocomplete.stepsInvariants": true,
     "cucumberautocomplete.customParameters": [
         {
-            "parameter":"{ab}",
-            "value":"(a|b)"
-        },
-        
+            "parameter": "{ab}",
+            "value": "(a|b)"
+        }
     ],
     
     "cucumberautocomplete.skipDocStringsFormat": true,
     "cucumberautocomplete.formatConfOverride": {
         "And": 3,
-        "But": "relative",
+        "But": "relative"
     },
     "cucumberautocomplete.onTypeFormat": true,
     "editor.quickSuggestions": {
@@ -30,16 +28,5 @@
     "cucumberautocomplete.gherkinDefinitionPart": "(Given|When|Then)\\(",
     "cucumberautocomplete.stepRegExSymbol": "'",
 
-
+   
 }
-
-
-
-
-
-
-
-
-
-
-
