--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "playwright.config.js",
   "scripts": {
     "smoke": "npx bddgen && npx playwright test --headed  --browser=chromium --grep '@smoke'",
-    "regression": "npx bddgen && npx playwright test --headed  --browser=chromium --grep '@reg'",
-    "test": "npx bddgen && npx playwright test --headed --browser=chromium && open /.cucumber-report/report.html",
+    "regression": "npx bddgen && npx playwright test --headed --grep '@reg'",
+    "test": "npx bddgen && npx playwright test --headed --browser=chromium",
     "debug": "npx bddgen && npx playwright test --debug",
     "codegen": "npx bddgen && npx playwright codegen ",
-    "report": "npx bddgen && npx playwright test --headed --reporter=html",
-    "test:ci": "npx bddgen && npx playwright test --headed  --browser=chromium --reporter=html"
+    "allure": "npx bddgen && npx playwright test --headed && allure generate allure-results --clean -o allure-report --clean && allure open allure-report",
+    "test_CI": "npx bddgen && npx playwright test --headed --browser=chromium && open /.cucumber-report/report.html"
   },
   "keywords": [],
   "author": "",
@@ -25,8 +25,11 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^11.0.1",
-    "@playwright/test": "^1.47.2",
+    "@playwright/test": "^1.48.0",
     "@types/node": "^22.5.5",
+    "allure-js-commons": "^3.0.4",
+    "allure-playwright": "^3.0.4",
+    "cucumber-html-reporter": "^6.0.0",
     "playwright-bdd": "^7.5.0"
   }
 }
