--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "smoke": "npx bddgen && npx playwright test --headed  --browser=chromium --grep '@smoke'",
     "regression": "npx bddgen && npx playwright test --headed --grep '@reg'",
     "test": "npx bddgen && npx playwright test --headed --browser=chromium",
+    "headless": "npx bddgen && npx playwright test",
     "debug": "npx bddgen && npx playwright test --debug",
     "codegen": "npx bddgen && npx playwright codegen ",
     "allure": "npx bddgen && npx playwright test --headed && allure generate allure-results --clean -o allure-report --clean && allure open allure-report",
@@ -25,11 +26,13 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^11.0.1",
-    "@playwright/test": "^1.48.0",
+    "@eslint/js": "^9.12.0",
+    "@playwright/test": "^1.48.1",
     "@types/node": "^22.5.5",
     "allure-js-commons": "^3.0.4",
     "allure-playwright": "^3.0.4",
     "cucumber-html-reporter": "^6.0.0",
+    "globals": "^15.11.0",
     "playwright-bdd": "^7.5.0"
   }
 }
